--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.hibernate.ddl-auto=none
 # SQL Logging (For Verifying Batch Fetching)
 # ===============================
 # Enable detailed SQL logging to see batch fetching in action
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Show query statistics (count queries executed)
 # spring.jpa.properties.hibernate.generate_statistics=true
 
