--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=EmployeeModule
-spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/scores?ApplicationName=Your_Name
-spring.datasource.username=jayadeep
-spring.datasource.password=JDJp8DhJvF5g^E4q
+#spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/scores?ApplicationName=Your_Name
+#spring.datasource.username=jayadeep
+#spring.datasource.password=JDJp8DhJvF5g^E4q
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
- 
+spring.datasource.url=jdbc:postgresql://192.168.20.21:5432/scores_qa?ApplicationName=Your_Name
+spring.datasource.username=akhil
+spring.datasource.password=D7zmC7xMcv5N#m3Q
 
 
 
