--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,10 +53,12 @@ spring.datasource.hikari.pool-name=Your_Name
 
 #logging.level.com.zaxxer.hikari=DEBUG
 spring.datasource.hikari.max-lifetime=18000006
+spring.datasource.hikari.initialization-fail-timeout=0
 
 
 # Swagger OpenAPI
 # ===============================
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
  
