--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=EmployeeModule
-spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/scores?ApplicationName=Your_Name
+#spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/scores?ApplicationName=Your_Name
+spring.datasource.url=jdbc:postgresql://localhost:5432/scores?ApplicationName=EmployeeModule
 spring.datasource.username=jayadeep
 spring.datasource.password=JDJp8DhJvF5g^E4q
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
-
-
-
-
-
+ 
+ 
+ 
+ 
+ 
+ 
+ 
  
 # ===============================
 # Hibernate JPA Configuration
@@ -17,7 +18,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
-
+ 
 # ===============================
 # SQL Logging (For Verifying Batch Fetching)
 # ===============================
@@ -26,7 +27,7 @@ spring.jpa.hibernate.ddl-auto=none
 # logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Show query statistics (count queries executed)
 # spring.jpa.properties.hibernate.generate_statistics=true
-
+ 
 # ===============================
 # Hibernate Batch Fetching (Fixes N+1 Query Problems)
 # ===============================
@@ -40,22 +41,22 @@ spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.order_updates=true
 # Enable batch versioning for optimistic locking
 #spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
-
+ 
 spring.datasource.hikari.maximum-pool-size=10
-
+ 
 spring.datasource.hikari.minimum-idle=0
-
+ 
 spring.datasource.hikari.idle-timeout=50000
-
+ 
 spring.datasource.hikari.connection-timeout=300000
-
+ 
 spring.datasource.hikari.pool-name=Your_Name
-
+ 
 #logging.level.com.zaxxer.hikari=DEBUG
 spring.datasource.hikari.max-lifetime=18000006
 spring.datasource.hikari.initialization-fail-timeout=0
-
-
+ 
+ 
 # Swagger OpenAPI
 # ===============================
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -80,7 +81,7 @@ spring.data.redis.host=192.168.20.58
  
 # Redis password
 spring.data.redis.password=Welcome@123
-
+ 
 # ===============================
 # Application Identification
 # ===============================
@@ -92,5 +93,7 @@ spring.data.redis.password=Welcome@123
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 #management.endpoints.web.exposure.include=health,info,env,refresh
-
-
+ 
+ 
+ 
+ 
