--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=EmployeeModule
-#spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/scores?ApplicationName=Your_Name
-spring.datasource.url=jdbc:postgresql://localhost:5432/scores?ApplicationName=EmployeeModule
+spring.datasource.url=jdbc:postgresql://192.168.20.20:5432/scores?ApplicationName=Your_Name
+#spring.datasource.url=jdbc:postgresql://localhost:5432/scores?ApplicationName=EmployeeModule
 spring.datasource.username=jayadeep
 spring.datasource.password=JDJp8DhJvF5g^E4q
 spring.datasource.driver-class-name=org.postgresql.Driver
